--- a/index.html
+++ b/index.html
@@ -8,12 +8,71 @@
 	<script src="foundation/js/vendor/modernizr.js"></script>
 </head>
 <body>
+	<header class="row">
+		<h1>
+			Esto es un blog basado en Foundation
+		</h1>
+		<nav class="top-bar" data-topbar>
+			  <!-- <ul class="title-area">
+			    <li class="name">
+			      <h1><a href="#">My Site</a></h1>
+			    </li>
+			    <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
+			  </ul> -->
+
+			  <section class="top-bar-section">
+			    <!-- Right Nav Section -->
+			    <ul class="right">
+			      <li class="active"><a href="#">Right Button Active</a></li>
+			      <!-- <li class="has-dropdown">
+			        <a href="#">Right Button Dropdown</a>
+			        <ul class="dropdown">
+			          <li><a href="#">First link in dropdown</a></li>
+			        </ul>
+			      </li> -->
+			    </ul>
+
+			    <!-- Left Nav Section -->
+			    <ul class="left">
+			      <li><a href="#">Left Nav Button</a></li>
+			    </ul>
+			  </section>
+		</nav>
+	</header>	
+	<nav class="top-bar" data-topbar>
 	<section class="row">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, debitis, saepe, at id adipisci a repellat fugiat distinctio harum nostrum voluptates ad nam. Deleniti quaerat ipsam reprehenderit sequi dolorem voluptatem!
-	</section>
-	<section class="row">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, debitis, saepe, at id adipisci a repellat fugiat distinctio harum nostrum voluptates ad nam. Deleniti quaerat ipsam reprehenderit sequi dolorem voluptatem!
-	</section>
+		<section class="small-12 medium-8 large-7 columns">
+			<article class="row panel">
+				<h2>Titulo del Post</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, debitis, saepe, at id adipisci a repellat fugiat distinctio harum nostrum voluptates ad nam. Deleniti quaerat ipsam reprehenderit sequi dolorem voluptatem!</p>
+				<a href="" class="button round">Ir al post</a>
+			</article>
+			<article class="row panel">
+				<h2>Titulo del Post</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, debitis, saepe, at id adipisci a repellat fugiat distinctio harum nostrum voluptates ad nam. Deleniti quaerat ipsam reprehenderit sequi dolorem voluptatem!</p>
+				<a href="" class="button small">Ir al post</a>
+				<a href="" class="button medium">Ir al post</a>
+				<a href="" class="button large">Ir al post</a>
+			</article>
+		</section>
+		<section class="small-12 medium-4 large-4 columns">
+			<section class="row" data-equalizer>
+				<article class="small-6 columns panel" data-equalizer-watch>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, debitis, saepe, at id adipisci a repellat fugiat distinctio harum nostrum voluptates ad nam. Deleniti quaerat ipsam reprehenderit sequi dolorem voluptatem!
+				</article>
+				<article class="small-6 columns panel" data-equalizer-watch>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, debitis, saepe, at id adipisci a repellat fugiat distinctio harum nostrum voluptates ad nam. 
+				</article>
+			</section>
+			<section class="row" data-equalizer>
+				<article class="small-6 columns panel" data-equalizer-watch>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, debitis, saepe, at id adipisci a repellat fugiat distinctio harum nostrum voluptates ad nam. 
+				</article>
+				<article class="small-6 columns panel" data-equalizer-watch>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, debitis, saepe, at id adipisci a repellat fugiat distinctio harum nostrum voluptates ad nam. Deleniti quaerat ipsam reprehenderit sequi dolorem voluptatem!
+				</article>
+			</section>
+		</section>
     <script src="foundation/js/vendor/jquery.js"></script>
     <script src="foundation/js/foundation.min.js"></script>
     <script>
